# AprilTags4j

./: .gitmodules  build.gradle  crosscompile.gradle  gradle.properties  settings.gradle
apriltags4j/: build.gradle  publish.gradle
apriltags4j/src/main/java/com/flash3388/apriltags4j/: AprilTagsDetectionsJNI.java  AprilTagsDetectorJNI.java  AprilTagsFamilyJNI.java  Detection.java  DetectionInfo.java  Detections.java  Detector.java  DetectorConfiguration.java  Family.java  FamilyType.java  JNIException.java  TagPose.java
apriltags4j/src/main/jni/: CMakeLists.txt  apriltag_detections.cpp  apriltag_detector.cpp  apriltag_family.cpp
examples/basic-opencv/: .gitignore  build.gradle
examples/basic-opencv/src/main/java/project/: Main.java
src/main/java/com/flash3388/apriltags4j/: AprilTagDetection.java  AprilTagFamilies.java  AprilTags.java  AprilTagsDetectionsJNI.java  AprilTagsDetectorJNI.java  Detection.java  DetectionInfo.java  Detections.java  Detector.java  FlatMatrix.java
src/main/jni/: CMakeLists.txt  apriltag_detections.cpp  apriltag_detector.cpp  apriltag_family.cpp  apriltags.c  apriltagsFamilies.c  except.h
